- Fixed dark mode - Added form not found

--- a/static/css/basics.css
+++ b/static/css/basics.css
@@ -15,15 +15,19 @@
 }
 
 :root[data-theme="dark"] {
-    --primary-bg: #13131a;
-    --secondary-bg: #1c1c24;
-    --tertiary-bg: #292932;
-    --primary-font-clr: #6f6f7c;
-    --secondary-font-clr: #33333d;
+    --primary-bg: #16181d;
+    --secondary-bg: #1c1f26;
+    --tertiary-bg: #576175;
+    --primary-font-clr: #a7b2c7;
+    --secondary-font-clr: #c9d0df;
 }
 
 ::-webkit-scrollbar {
     display: none;
+}
+::placeholder {
+    color: var(--primary-font-clr);
+    opacity: .5;
 }
 
 @font-face {
